--- a/_posts/blog/2017-01-01-my-2016.md
+++ b/_posts/blog/2017-01-01-my-2016.md
@@ -74,19 +74,19 @@ keywords: 2016, 计划, 总结
 
 相较于活跃的数字来讲，过去一年里值得一提的个人项目主要是下面这三个：
 
-* [awesome-adb](https://github.com/mzlogin/awesome-adb)
+* [awesome-adb](https://github.com/wvalianty/awesome-adb)
 
   目前网络上能找到的最完善的 ADB 用法大全。
   
   它在 GitHub 的 Trending 上待了几天，最高 Repositories 排名第 4，最高 Developers 排名第 6，目前 Star 数过 2000。我至今仍记得上 Trending 的第一天我激动地与 Linus 合影留恋时的心情。
 
-* [vim-markdown-toc](https://github.com/mzlogin/vim-markdown-toc)
+* [vim-markdown-toc](https://github.com/wvalianty/vim-markdown-toc)
 
   一款 Vim 插件，主要功能是为 Markdown 文档自动生成和维护 Table of Contents。
 
   Star 数不到百，但每天都有人 clone，Vim 必备插件 nerdtree 的作者 [scrooloose](https://github.com/scrooloose) 还来提过 Issue 和 PR，让我体会到与传说中的人交流的感受。
 
-* [chinese-copywriting-guidelines](https://github.com/mzlogin/chinese-copywriting-guidelines)
+* [chinese-copywriting-guidelines](https://github.com/wvalianty/chinese-copywriting-guidelines)
 
   中文文案排版指北（简体中文版）。
 
