--- a/_posts/2021-02-15-hi-world.md
+++ b/_posts/2021-02-15-hi-world.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title: test-title 
+categories: test 
+description: the description 
+keywords: test key 
+---
 ### test
 test
 test
