--- a/_posts/2021-02-15-helm.md
+++ b/_posts/2021-02-15-helm.md
@@ -5,35 +5,39 @@ categories: kubernetes
 description: 我对 helm 的总结 
 keywords: k8s helm 
 ---
-# helm
-[toc]
-### 一、 什么是 helm ？
-kubernetes 中应用以 yaml 文件的形式编排，helm 就是设计用来管理这些 yaml 文件的工具，类似于 centos 系统中的 yum。而且在云操作系统时代，helm 被赋予了更多的意义，应用分享，应用管理等。
+## 一、 什么是 helm ？
+kubernetes 中应用以 yaml 文件的形式编排，helm 就是设计用来管理这些 yaml 文件的工具，类似于 centos 系统中的 yum。而且在云操作系统时代，helm 被赋予了更多的意义，应用分享，应用管理等。 
+
 一般使用 helm 管理的应用有两种，一种是开源的应用。另一种是自己公司的应用。开源应用的 yaml 文件编排已经被社区完成，只需要使用 helm 命令来执行安装即可，但是自己公司的应用，需要自己编写 yaml 文件来组织。
+
 helm 中一般一个应用编排为一个 chart。
-### 二、 helm 版本
+## 二、 helm 版本
 #### 1、v2 
 * client server 架构
 * client 先将 yaml 提交到 server 端
-* server 提交到 apiserver
+* server 提交到 apiserver  
+
 #### 2、v3
 * 使用和 kubectl 一样的验权方式，helm 客户端直接和 apiserver 打交道
+
 #### 3、 重要区别
 * v3 移除了 tiller，改有 helm 客户端命令直接与 apiserver 打交道，使 helm 更易使用
+
 ### 三、 helm 基础命令
-##### 1、 添加仓库
+
+#### 1、 添加仓库
 ```
 helm repo add apphub https://apphub.aliyuncs.com
 ```
-##### 2、 搜索仓库中的应用
+#### 2、 搜索仓库中的应用
 ```
 helm search repo nginx
 ```
-##### 3、 下载
+#### 3、 下载
 ```
 helm pull apphub/nginx
 ```
-##### 4、 安装/升级
+#### 4、 安装/升级
 ```
 helm upgrade --install --dry-run  hello-world .
 # 安装到指定命名空间
@@ -45,44 +49,44 @@ helm upgrade --install --dry-run  hello-world  -f ./v.yaml  --set configmap.name
 ```
 使用这个有一个好处，安装和升级都可以使用这一条命令，完美的支持了应用第一次部署和后面升级的支持。如果集群中有这个应用则执行升级，如果没有则执行安装。
 在执行安装的时候，需要考虑**依赖**是否已经更新，如果没有则需要**先更新依赖**。
-##### 5、 依赖
+#### 5、 依赖
 ```
 # 全写
 helm dependency update
 # 缩写
 helm dep up
 ```
-##### 6、 卸载已安装应用
+#### 6、 卸载已安装应用
 ```
 helm uninstall demo --namespace test
 ```
-##### 7、 查看已安装应用
+#### 7、 查看已安装应用
 ```
 # 当前命名空间
 helm list 
 # 所有命名空间
 helm list -A
 ```
-##### 8、 查看已安装应用的历史版本 
+#### 8、 查看已安装应用的历史版本 
 ```
 helm history hello-world
 ```
-##### 9、 回滚
+#### 9、 回滚
 ```
 helm rollback <RELEASE> [REVISION]
 helm rollback hello-world 1
 ```
-##### 10、 打包
+#### 10、 打包
 ```
 helm package .
 ```
-##### 11、 查看已安装应用具体 yaml 内容
+#### 11、 查看已安装应用具体 yaml 内容
 ```
 helm get manifest hello-world
 ```
-### 四、 模版语法
-##### 1、 chart 组织结构
-```
+## 四、 模版语法
+#### 1、 chart 组织结构
+```sh
 # tree demo01
 demo01
 |-- Chart.yaml  # 本 chart 相关元信息，像版本，名字、依赖定义等，在模版中通过 .Chart.Name .Chart.AppVersion .Chart.Version 等引用
@@ -103,9 +107,10 @@ demo01
 * 相同内容抽象提取到统一文件中，并可配置
 * 模版引用
 * 多应用多 chart 的组织结构
-##### 2、 values.yaml
+
+#### 2、 values.yaml
 如果项目包含子 chart，父子 chart 的 values.yaml 配置内容可以形成层次结构，可以在父 chart 中控制子 chart。
-```
+```sh
 # 父子 chart 的 values.yaml
 ☁  mychart-2  cat values.yaml
 title: "MyChart-2"
@@ -168,8 +173,10 @@ data:
 ---
 ```
 可以看到 父 chart 中定义的**覆盖了**子 chart。
-##### 3、 Chart.yaml
-* helm v3 依赖的定义是在此文件中
+
+#### 3、 Chart.yaml
+* helm v3 依赖的定义是在此文件中  
+
 ```
 dependencies:
   - name: redis
@@ -178,23 +185,23 @@ dependencies:
     condition: redis.enabled
 ```
 * 在模版中通过 .Chart.Name .Chart.AppVersion .Chart.Version 等引用
-##### 4、 模版基础标识
+
+#### 4、 模版基础标识
 * 限界符号 “{{ }}”
 * 注释  “{{/* */}}”
 * 删除回车符 “-”
 * “.”表示当前变量
-##### 5、 常用模版函数
-###### I、 define 和 include
-```
+
+#### 5、 常用模版函数
+##### I、 define 和 include
+```sh
 ☁  demo  cat templates/_hpl.tpl
 {{- define "demo.cm.labels" -}}
 app_name: demo
 {{- end -}}
-
 {{- define "demo.deploy.labels" -}}
 {{- include "demo.cm.labels" . -}}
 {{- end -}}
-
 ☁  demo  cat templates/configmap.yaml
 {{- $name := .Values.cm.name -}}
 {{- if eq $name "cm-A" -}}
@@ -233,14 +240,14 @@ data:
   k1: v1
   k2: v2
 ```
-###### II、 default
+##### II、 default
 default 取后面首个非空
-###### III、 required
+##### III、 required
 ```
 # 如果没有定义则抛出错误，停止安装
 {{ required "error!" .Values.service.port }}
 ```
-###### IV、 range
+##### IV、 range
 ```
 ☁  mychart-3  cat values.yaml
 pizzaToppings:
@@ -292,7 +299,7 @@ data:
     {{- end }}
 {{- end -}}
 ```
-###### V、 字符处理 trunc、trimPrefix、trimSuffix
+##### V、 字符处理 trunc、trimPrefix、trimSuffix
 ```
 {{- default .Chart.Name .Values.nameOverride "abcdef" | trunc 63 | trimSuffix "-" }}
 # default 后面跟多个，取第一个非空的
@@ -301,7 +308,7 @@ data:
 # trimSuffix 删除后缀
 # trimPrefix 删除前缀
 ```
-###### VI、 限定作用域 with
+##### VI、 限定作用域 with
 ```
 apiVersion: v1
 kind: ConfigMap
@@ -312,7 +319,7 @@ data:
         {{ toYaml . | nindent 2 }}
     {{- end -}}
 ```
-###### VII、 变量定义和使用
+##### VII、 变量定义和使用
 ```
 ☁  demo  cat templates/configmap.yaml
 {{- $name := .Values.cm.name -}}
@@ -346,7 +353,7 @@ data:
   k1: v1
   k2: v2
 ```
-###### VIII、 json 转 yaml -> toYaml
+##### VIII、 json 转 yaml -> toYaml
 ```
 ☁  demo  cat values.yaml
 cm:
@@ -369,7 +376,7 @@ data:
   k1: v1
   k2: v2
 ```
-###### IX、 hook
+##### IX、 hook
 我对 hook 机制的理解是，知道有这个工具可以解决部署中的顺序的问题，但是一般不会使用这个。
 helm 利用 hook 机制，给执行 helm 创建资源提供前置和后置钩子。
 那么这个前置和后置的依据是什么呢？
@@ -406,11 +413,14 @@ spec:
         image: "alpine:3.7"
         command: ["/bin/sleep","{{default "20" .Values.sleepyTime}}"]
 ```
-### 五、 参考
+
+## 五、 参考
 [官方文档](https://helm.sh/zh/docs/helm/helm_rollback/) 
 [模版函数列表](https://helm.sh/zh/docs/chart_template_guide/function_list/) 
 [hook 资料 gitbook](https://whmzsu.github.io/helm-doc-zh-cn/chart/charts_hooks-zh_cn.html) 
 [chart 提示开发技巧](https://helm.sh/zh/docs/howto/charts_tips_and_tricks/) 
-### 六、 FAQ
-1、helm v3 同一个chart 在安装的时候指定不同的名字，时候可以再次进行安装，换一个命名空间呢？
+
+## 六、 FAQ
+
+#### 1、helm v3 同一个chart 在安装的时候指定不同的名字，时候可以再次进行安装，换一个命名空间呢？
 答：相同的名字都可以在不同的命名空间安装
