--- a/_posts/2021-02-15-helm.md
+++ b/_posts/2021-02-15-helm.md
@@ -133,16 +133,16 @@ title: subchart2-title
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: \ { { .Release.Name }}-configmap
 data:
-  title: {{ .Values.title }}
+  title: \ { { .Values.title }}
 ☁  mychart-2  cat charts/mysubchart2/templates/configmap.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: \ { { .Release.Name }}-configmap
 data:
-  title: {{ .Values.title }}
+  title: \ { { .Values.title }}
 =================================================
 ☁  mychart-2  helm upgrade --install --dry-run  demo .
 Release "demo" does not exist. Installing it now.
@@ -187,8 +187,8 @@ dependencies:
 * 在模版中通过 .Chart.Name .Chart.AppVersion .Chart.Version 等引用
 
 #### 4、 模版基础标识
-* 限界符号 “{{ }}”
-* 注释  “{{/* */}}”
+* 限界符号 “\ { { }}”
+* 注释  “\ { {/* */}}”
 * 删除回车符 “-”
 * “.”表示当前变量
 
@@ -196,27 +196,27 @@ dependencies:
 ##### I、 define 和 include
 ```sh
 ☁  demo  cat templates/_hpl.tpl
-{{- define "demo.cm.labels" -}}
+\ { {- define "demo.cm.labels" -}}
 app_name: demo
-{{- end -}}
-{{- define "demo.deploy.labels" -}}
-{{- include "demo.cm.labels" . -}}
-{{- end -}}
+\ { {- end -}}
+\ { {- define "demo.deploy.labels" -}}
+\ { {- include "demo.cm.labels" . -}}
+\ { {- end -}}
 ☁  demo  cat templates/configmap.yaml
-{{- $name := .Values.cm.name -}}
-{{- if eq $name "cm-A" -}}
+\ { {- $name := .Values.cm.name -}}
+\ { {- if eq $name "cm-A" -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: \ { { .Release.Name }}-configmap
   labels:
-    {{- include "demo.cm.labels" . | nindent 4 }}
-    {{- include "demo.deploy.labels" . | nindent 4 }}
+    \ { {- include "demo.cm.labels" . | nindent 4 }}
+    \ { {- include "demo.deploy.labels" . | nindent 4 }}
 data:
-    {{- with .Values.cm.data -}}
-        {{ toYaml . | nindent 2 }}
-    {{- end -}}
-{{- end -}}
+    \ { {- with .Values.cm.data -}}
+        \ { { toYaml . | nindent 2 }}
+    \ { {- end -}}
+\ { {- end -}}
 ☁  demo  helm upgrade --install --dry-run  demo .
 Release "demo" does not exist. Installing it now.
 NAME: demo
@@ -245,7 +245,7 @@ default 取后面首个非空
 ##### III、 required
 ```
 # 如果没有定义则抛出错误，停止安装
-{{ required "error!" .Values.service.port }}
+\ { { required "error!" .Values.service.port }}
 ```
 ##### IV、 range
 ```
@@ -259,12 +259,12 @@ pizzaToppings:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: \ { { .Release.Name }}-configmap
 data:
   toppings: |-
-    {{- range .Values.pizzaToppings }}
-    - {{ . | title | quote }} #这里面是用“.”代表当前值
-    {{- end }}
+    \ { {- range .Values.pizzaToppings }}
+    - \ { { . | title | quote }} #这里面是用“.”代表当前值
+    \ { {- end }}
 ☁  mychart-3  helm upgrade --install --dry-run  demo .
 # Source: mychart-3/templates/configmap.yaml
 apiVersion: v1
@@ -284,24 +284,24 @@ cm:
     name: "cm-A"
     data: {"k1":"v1","k2":"v2"}
 ☁  demo  cat templates/configmap.yaml
-{{- $name := .Values.cm.name -}}
-{{- if eq $name "cm-A" -}}
+\ { {- $name := .Values.cm.name -}}
+\ { {- if eq $name "cm-A" -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: \ { { .Release.Name }}-configmap
   labels:
-    {{- include "demo.cm.labels" . | nindent 4 }}
-    {{- include "demo.deploy.labels" . | nindent 4 }}
+    \ { {- include "demo.cm.labels" . | nindent 4 }}
+    \ { {- include "demo.deploy.labels" . | nindent 4 }}
 data:
-    {{- range $k, $v := .Values.cm.data }}
-        {{ $k }}: {{ $v }}
-    {{- end }}
-{{- end -}}
+    \ { {- range $k, $v := .Values.cm.data }}
+        \ { { $k }}: \ { { $v }}
+    \ { {- end }}
+\ { {- end -}}
 ```
 ##### V、 字符处理 trunc、trimPrefix、trimSuffix
 ```
-{{- default .Chart.Name .Values.nameOverride "abcdef" | trunc 63 | trimSuffix "-" }}
+\ { {- default .Chart.Name .Values.nameOverride "abcdef" | trunc 63 | trimSuffix "-" }}
 # default 后面跟多个，取第一个非空的
 # .Chart.Name Chart.yaml 中定义的 name
 # trunc 63 从左到右截取63个字母，如果大于的话
@@ -313,26 +313,26 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: \ { { .Release.Name }}-configmap
 data:
-    {{- with .Values.cm.data -}}
-        {{ toYaml . | nindent 2 }}
-    {{- end -}}
+    \ { {- with .Values.cm.data -}}
+        \ { { toYaml . | nindent 2 }}
+    \ { {- end -}}
 ```
 ##### VII、 变量定义和使用
 ```
 ☁  demo  cat templates/configmap.yaml
-{{- $name := .Values.cm.name -}}
-{{- if eq $name "cm-A" -}}
+\ { {- $name := .Values.cm.name -}}
+\ { {- if eq $name "cm-A" -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: \ { { .Release.Name }}-configmap
 data:
-    {{- with .Values.cm.data -}}
-        {{ toYaml . | nindent 2 }}
-    {{- end -}}
-{{- end -}}
+    \ { {- with .Values.cm.data -}}
+        \ { { toYaml . | nindent 2 }}
+    \ { {- end -}}
+\ { {- end -}}
 ☁  demo  helm upgrade --install --dry-run  demo .
 Release "demo" does not exist. Installing it now.
 NAME: demo
@@ -363,9 +363,9 @@ cm:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: \ { { .Release.Name }}-configmap
 data:
-    {{- toYaml .Values.cm.data | nindent 2 -}}
+    \ { {- toYaml .Values.cm.data | nindent 2 -}}
 ☁  demo  helm upgrade --install --dry-run  demo .
 # Source: demo/templates/configmap.yaml
 apiVersion: v1
@@ -387,11 +387,11 @@ hook的定义：
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{.Release.Name}}"
+  name: "\ { {.Release.Name}}"
   labels:
-    heritage: {{.Release.Service | quote }}
-    release: {{.Release.Name | quote }}
-    chart: "{{.Chart.Name}}-{{.Chart.Version}}"
+    heritage: \ { {.Release.Service | quote }}
+    release: \ { {.Release.Name | quote }}
+    chart: "\ { {.Chart.Name}}-\ { {.Chart.Version}}"
   annotations:
     # This is what defines this resource as a hook. Without this line, the
     # job is considered part of the release.
@@ -401,17 +401,17 @@ metadata:
 spec:
   template:
     metadata:
-      name: "{{.Release.Name}}"
+      name: "\ { {.Release.Name}}"
       labels:
-        heritage: {{.Release.Service | quote }}
-        release: {{.Release.Name | quote }}
-        chart: "{{.Chart.Name}}-{{.Chart.Version}}"
+        heritage: \ { {.Release.Service | quote }}
+        release: \ { {.Release.Name | quote }}
+        chart: "\ { {.Chart.Name}}-\ { {.Chart.Version}}"
     spec:
       restartPolicy: Never
       containers:
       - name: pre-install-job
         image: "alpine:3.7"
-        command: ["/bin/sleep","{{default "20" .Values.sleepyTime}}"]
+        command: ["/bin/sleep","\ { {default "20" .Values.sleepyTime}}"]
 ```
 
 ## 五、 参考
@@ -424,3 +424,4 @@ spec:
 
 #### 1、helm v3 同一个chart 在安装的时候指定不同的名字，时候可以再次进行安装，换一个命名空间呢？
 答：相同的名字都可以在不同的命名空间安装
+#### 2、难言之隐，这里使用的 kramdown 作为 markdown，helm 中的 “\ { { ”这个限界符号与 markdown 解析的时候发生冲突，如果不加“\”,则看不到该行内容，这里退而求其次。
