--- a/_posts/2021-02-15-helm.md
+++ b/_posts/2021-02-15-helm.md
@@ -111,6 +111,7 @@ demo01
 #### 2、 values.yaml
 如果项目包含子 chart，父子 chart 的 values.yaml 配置内容可以形成层次结构，可以在父 chart 中控制子 chart。
 ```sh
+{% raw %}
 # 父子 chart 的 values.yaml
 ☁  mychart-2  cat values.yaml
 title: "MyChart-2"
@@ -133,16 +134,16 @@ title: subchart2-title
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: \ { { .Release.Name }}-configmap
+  name: {{ .Release.Name }}-configmap
 data:
-  title: \ { { .Values.title }}
+  title: {{ .Values.title }}
 ☁  mychart-2  cat charts/mysubchart2/templates/configmap.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: \ { { .Release.Name }}-configmap
+  name: {{ .Release.Name }}-configmap
 data:
-  title: \ { { .Values.title }}
+  title: {{ .Values.title }}
 =================================================
 ☁  mychart-2  helm upgrade --install --dry-run  demo .
 Release "demo" does not exist. Installing it now.
@@ -171,6 +172,7 @@ metadata:
 data:
   title: subchart2-title
 ---
+{% endraw %}
 ```
 可以看到 父 chart 中定义的**覆盖了**子 chart。
 
@@ -187,36 +189,37 @@ dependencies:
 * 在模版中通过 .Chart.Name .Chart.AppVersion .Chart.Version 等引用
 
 #### 4、 模版基础标识
-* 限界符号 “\ { { }}”
-* 注释  “\ { {/* */}}”
+* 限界符号 ```{% raw %}{{ }}{% endraw %}```
+* 注释  ```{% raw %}{{/* */}}{% endraw %}```
 * 删除回车符 “-”
 * “.”表示当前变量
 
 #### 5、 常用模版函数
 ##### I、 define 和 include
 ```sh
+{% raw %}
 ☁  demo  cat templates/_hpl.tpl
-\ { {- define "demo.cm.labels" -}}
+{{- define "demo.cm.labels" -}}
 app_name: demo
-\ { {- end -}}
-\ { {- define "demo.deploy.labels" -}}
-\ { {- include "demo.cm.labels" . -}}
-\ { {- end -}}
+{{- end -}}
+{{- define "demo.deploy.labels" -}}
+{{- include "demo.cm.labels" . -}}
+{{- end -}}
 ☁  demo  cat templates/configmap.yaml
-\ { {- $name := .Values.cm.name -}}
-\ { {- if eq $name "cm-A" -}}
+{{- $name := .Values.cm.name -}}
+{{- if eq $name "cm-A" -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: \ { { .Release.Name }}-configmap
+  name: {{ .Release.Name }}-configmap
   labels:
-    \ { {- include "demo.cm.labels" . | nindent 4 }}
-    \ { {- include "demo.deploy.labels" . | nindent 4 }}
+    {{- include "demo.cm.labels" . | nindent 4 }}
+    {{- include "demo.deploy.labels" . | nindent 4 }}
 data:
-    \ { {- with .Values.cm.data -}}
-        \ { { toYaml . | nindent 2 }}
-    \ { {- end -}}
-\ { {- end -}}
+    {{- with .Values.cm.data -}}
+        {{ toYaml . | nindent 2 }}
+    {{- end -}}
+{{- end -}}
 ☁  demo  helm upgrade --install --dry-run  demo .
 Release "demo" does not exist. Installing it now.
 NAME: demo
@@ -239,16 +242,20 @@ metadata:
 data:
   k1: v1
   k2: v2
+{% endraw %}
 ```
 ##### II、 default
 default 取后面首个非空
 ##### III、 required
 ```
+{% raw %}
 # 如果没有定义则抛出错误，停止安装
-\ { { required "error!" .Values.service.port }}
+{{ required "error!" .Values.service.port }}
+{% endraw %}
 ```
 ##### IV、 range
 ```sh
+{% raw %}
 ☁  mychart-3  cat values.yaml
 pizzaToppings:
   - mushrooms
@@ -259,12 +266,12 @@ pizzaToppings:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: \ { { .Release.Name }}-configmap
+  name: {{ .Release.Name }}-configmap
 data:
   toppings: |-
-    \ { {- range .Values.pizzaToppings }}
-    - \ { { . | title | quote }} #这里面是用“.”代表当前值
-    \ { {- end }}
+    {{- range .Values.pizzaToppings }}
+    - {{ . | title | quote }} #这里面是用“.”代表当前值
+    {{- end }}
 ☁  mychart-3  helm upgrade --install --dry-run  demo .
 # Source: mychart-3/templates/configmap.yaml
 apiVersion: v1
@@ -277,62 +284,70 @@ data:
     - "Cheeses" #这里面是用“.”代表当前值
     - "Peppers" #这里面是用“.”代表当前值
     - "Onions" #这里面是用“.”代表当前值
+{% endraw %}
 ```
 ```sh
+{% raw %}
 ☁  demo  cat values.yaml
 cm:
     name: "cm-A"
     data: {"k1":"v1","k2":"v2"}
 ☁  demo  cat templates/configmap.yaml
-\ { {- $name := .Values.cm.name -}}
-\ { {- if eq $name "cm-A" -}}
+{{- $name := .Values.cm.name -}}
+{{- if eq $name "cm-A" -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: \ { { .Release.Name }}-configmap
+  name: {{ .Release.Name }}-configmap
   labels:
-    \ { {- include "demo.cm.labels" . | nindent 4 }}
-    \ { {- include "demo.deploy.labels" . | nindent 4 }}
+    {{- include "demo.cm.labels" . | nindent 4 }}
+    {{- include "demo.deploy.labels" . | nindent 4 }}
 data:
-    \ { {- range $k, $v := .Values.cm.data }}
-        \ { { $k }}: \ { { $v }}
-    \ { {- end }}
-\ { {- end -}}
+    {{- range $k, $v := .Values.cm.data }}
+        {{ $k }}: {{ $v }}
+    {{- end }}
+{{- end -}}
+{% endraw %}
 ```
 ##### V、 字符处理 trunc、trimPrefix、trimSuffix
 ```
-\ { {- default .Chart.Name .Values.nameOverride "abcdef" | trunc 63 | trimSuffix "-" }}
+{% raw %}
+{{- default .Chart.Name .Values.nameOverride "abcdef" | trunc 63 | trimSuffix "-" }}
 # default 后面跟多个，取第一个非空的
 # .Chart.Name Chart.yaml 中定义的 name
 # trunc 63 从左到右截取63个字母，如果大于的话
 # trimSuffix 删除后缀
 # trimPrefix 删除前缀
+{% endraw %}
 ```
 ##### VI、 限定作用域 with
 ```
+{% raw %}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: \ { { .Release.Name }}-configmap
+  name: {{ .Release.Name }}-configmap
 data:
-    \ { {- with .Values.cm.data -}}
-        \ { { toYaml . | nindent 2 }}
-    \ { {- end -}}
+    {{- with .Values.cm.data -}}
+        {{ toYaml . | nindent 2 }}
+    {{- end -}}
+{% endraw %}
 ```
 ##### VII、 变量定义和使用
 ```sh
+{% raw %}
 ☁  demo  cat templates/configmap.yaml
-\ { {- $name := .Values.cm.name -}}
-\ { {- if eq $name "cm-A" -}}
+{{- $name := .Values.cm.name -}}
+{{- if eq $name "cm-A" -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: \ { { .Release.Name }}-configmap
+  name: {{ .Release.Name }}-configmap
 data:
-    \ { {- with .Values.cm.data -}}
-        \ { { toYaml . | nindent 2 }}
-    \ { {- end -}}
-\ { {- end -}}
+    {{- with .Values.cm.data -}}
+        {{ toYaml . | nindent 2 }}
+    {{- end -}}
+{{- end -}}
 ☁  demo  helm upgrade --install --dry-run  demo .
 Release "demo" does not exist. Installing it now.
 NAME: demo
@@ -352,9 +367,11 @@ metadata:
 data:
   k1: v1
   k2: v2
+{% endraw %}
 ```
 ##### VIII、 json 转 yaml -> toYaml
 ```sh
+{% raw %}
 ☁  demo  cat values.yaml
 cm:
     name: "cm-A"
@@ -363,9 +380,9 @@ cm:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: \ { { .Release.Name }}-configmap
+  name: {{ .Release.Name }}-configmap
 data:
-    \ { {- toYaml .Values.cm.data | nindent 2 -}}
+    {{- toYaml .Values.cm.data | nindent 2 -}}
 ☁  demo  helm upgrade --install --dry-run  demo .
 # Source: demo/templates/configmap.yaml
 apiVersion: v1
@@ -375,6 +392,7 @@ metadata:
 data:
   k1: v1
   k2: v2
+{% endraw %}
 ```
 ##### IX、 hook
 我对 hook 机制的理解是，知道有这个工具可以解决部署中的顺序的问题，但是一般不会使用这个。
@@ -383,15 +401,16 @@ helm 利用 hook 机制，给执行 helm 创建资源提供前置和后置钩子
 以 pre-install 为例子，设置为 pre-install 的资源在达到 “就绪状态”，才将其他的资源加载到 kubernetes 中。这个就绪状态根据不同资源类型，有不同的说法，如果是 job，就绪状态就是 成功运行 job 一次。如果 job 失败了，则发布失败。
 hook的定义：
 ```sh
+{% raw %}
 ☁  templates  cat pre-install-job.yaml
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "\ { {.Release.Name}}"
+  name: "{{.Release.Name}}"
   labels:
-    heritage: \ { {.Release.Service | quote }}
-    release: \ { {.Release.Name | quote }}
-    chart: "\ { {.Chart.Name}}-\ { {.Chart.Version}}"
+    heritage: {{.Release.Service | quote }}
+    release: {{.Release.Name | quote }}
+    chart: "{{.Chart.Name}}-{{.Chart.Version}}"
   annotations:
     # This is what defines this resource as a hook. Without this line, the
     # job is considered part of the release.
@@ -401,27 +420,32 @@ metadata:
 spec:
   template:
     metadata:
-      name: "\ { {.Release.Name}}"
+      name: "{{.Release.Name}}"
       labels:
-        heritage: \ { {.Release.Service | quote }}
-        release: \ { {.Release.Name | quote }}
-        chart: "\ { {.Chart.Name}}-\ { {.Chart.Version}}"
+        heritage: {{.Release.Service | quote }}
+        release: {{.Release.Name | quote }}
+        chart: "{{.Chart.Name}}-{{.Chart.Version}}"
     spec:
       restartPolicy: Never
       containers:
       - name: pre-install-job
         image: "alpine:3.7"
-        command: ["/bin/sleep","\ { {default "20" .Values.sleepyTime}}"]
+        command: ["/bin/sleep","{{default "20" .Values.sleepyTime}}"]
+{% endraw %}
 ```
 
 ## 五、 参考
 [官方文档](https://helm.sh/zh/docs/helm/helm_rollback/) 
+
 [模版函数列表](https://helm.sh/zh/docs/chart_template_guide/function_list/) 
-[hook 资料 gitbook](https://whmzsu.github.io/helm-doc-zh-cn/chart/charts_hooks-zh_cn.html) 
+
+[hook 资料 gitbook](https://whmzsu.github.io/helm-doc-zh-cn/chart/
+charts_hooks-zh_cn.html) 
+
 [chart 提示开发技巧](https://helm.sh/zh/docs/howto/charts_tips_and_tricks/) 
 
 ## 六、 FAQ
 
 #### 1、helm v3 同一个chart 在安装的时候指定不同的名字，时候可以再次进行安装，换一个命名空间呢？
 答：相同的名字都可以在不同的命名空间安装
-#### 2、难言之隐，这里使用的 kramdown 作为 markdown，helm 中的 “\ { { ”这个限界符号与 markdown 解析的时候发生冲突，如果不加“\”,则看不到该行内容，这里退而求其次。
+
